--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.1.1"
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "nodemailer": "^6.7.5"
   }
 }
