--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "intersection-observer": "^0.12.0",
     "nodemailer": "^6.7.5"
   }
 }
