--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
     "intersection-observer": "^0.12.0",
+    "logrocket": "^3.0.0",
     "nodemailer": "^6.7.5"
   }
 }
